--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "eric",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
-  }
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lnscend/eric.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lnscend/eric/issues"
+  },
+  "homepage": "https://github.com/lnscend/eric#readme",
+  "description": ""
 }
